objects/Contact.object
<CustomObject>
    <fields>
        <fullName>APStatus__c</fullName>
        <label>TO BE DELETED AP Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Account id the contact is associated to.</description>
        <label>zzAccount ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Local__c</fullName>
        <description>Field used to insert the partner name in local language by internal user</description>
        <formula>Account.AccountNameEnglish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email_Update_Time__c</fullName>
        <label>Account Owner Email Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <formula>Account.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Id_Update_Time__c</fullName>
        <formula>Account.Account_Owner_Update_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Vertical_Market_Detail__c</fullName>
        <description>Account Vertical Market (Detail)</description>
        <formula>Account.VMDTL__c</formula>
        <label>Account Vertical Market (Detail)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Vertical_Market_Sub__c</fullName>
        <description>Account Vertical Market (Sub)</description>
        <formula>Account.VMSUB__c</formula>
        <label>Account Vertical Market (Sub)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Vertical_Market_Top__c</fullName>
        <description>Account Vertical Market (Top)</description>
        <formula>Account.VMTOP__c</formula>
        <label>Account Vertical Market (Top)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Verified__c</fullName>
        <description>Indicates reason if partner provided contact was contact is approved by Partnr Admin (not used in Phase 1B)</description>
        <label>Admin Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Site_ID__c</fullName>
        <description>Indicates CSC Site Target ID of the partner company the contact is associated to, sourced from Contact SOR</description>
        <inlineHelpText>The Partner Site identifier of selected HQ partner site, sourced from the Partner Database.</inlineHelpText>
        <label>Partner Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Phone_Copy__c</fullName>
        <description>Copy of AssistantPhone without special characters</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AssistantPhone, ' ', '' ), '+', '' ), '(', '' ), ')', '' ), '-', '' ), '*', '' ), ':', '' ), '/', '' ), '#', '' ), '?', '' ), 'ext', '' ),'.', '' ),';', '' ),"'", '' ), ',', '' ), '"', '' ), '!', '' ), 'x', '' )</formula>
        <label>TO BE DELETED Asst. Phone Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttitudeTowardsCisco__c</fullName>
        <description>The contact or their company Attitude Towards Cisco, based on cisco marketing/sales person perspective</description>
        <label>Attitude Towards Cisco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
                <value>
                    <fullName>Security Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <description>The contact’s biography</description>
        <label>TO BE DELETED Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Borderless_Networks_Perferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Borderless Networks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Solution__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Business Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BuyingHistory__c</fullName>
        <description>indicates the Buying History of the contact</description>
        <label>TO BE DELETED Buying History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCO_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ID__c</fullName>
        <description>Channel Contact ID coming from CMDB - Contact SOR in PDB</description>
        <externalId>true</externalId>
        <label>CN ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CX_Team_Role__c</fullName>
        <description>This field is used by CX users.</description>
        <label>CX Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPE Experience Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement Lead</fullName>
                </value>
                <value>
                    <fullName>Customer Excellence Program Manager</fullName>
                </value>
                <value>
                    <fullName>Functional Leads/Service Owners</fullName>
                </value>
                <value>
                    <fullName>Customer Champion</fullName>
                </value>
                <value>
                    <fullName>Customer Listening Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>TO BE DELETED Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CiscoCertified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is the contact Cisco Certified?</description>
        <label>TO BE DELETED Cisco Certified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cisco_Relationship_Owner__c</fullName>
        <description>Name of person at who manages the contact
Used for AP</description>
        <label>Cisco Relationship Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaboration_Voice_Video_Preferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Collaboration, Voice &amp; Video</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional information regarding the contact.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactPermissionCall__c</fullName>
        <description>Indicates if Cisco can call the contact or not</description>
        <label>Contact Permission-Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPermissionEmail__c</fullName>
        <description>Indicates if Cisco can email the contact or not</description>
        <label>Contact Permission-Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPermissionFax__c</fullName>
        <description>Indicates if Cisco can Fax the contact or not</description>
        <label>Contact Permission-Fax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPermissionMail__c</fullName>
        <description>Indicates if Cisco can mail the contact or not</description>
        <label>Contact Permission-Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPermissionSMS__c</fullName>
        <description>Indicates if Cisco can send sms to the contact or not</description>
        <label>Contact Permission-SMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactStatus__c</fullName>
        <description>indicates if the contact is Active or Inactive</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <description>Filed used in reports to count number of contacts.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Delete_Date__c</fullName>
        <description>Contact Delete Date</description>
        <label>Contact Delete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Flags__c</fullName>
        <description>Generic field used to flag/tag contacts</description>
        <label>Contact Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TSN Entitlement Enabled</fullName>
                </value>
                <value>
                    <fullName>Systems Engineer (Partner SE)</fullName>
                </value>
                <value>
                    <fullName>Top 500 PSR-DE</fullName>
                </value>
                <value>
                    <fullName>Top 200 PSE-DE</fullName>
                </value>
                <value>
                    <fullName>Security Partner Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Success Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Join_Date__c</fullName>
        <description>Date partner contact registered himself in PSS</description>
        <label>Contact Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name_English__c</fullName>
        <description>As Per QW-3074: Used to Store Contact Name in English</description>
        <label>Contact Name (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Permission_Third_Party__c</fullName>
        <description>Can the contact information shared with other users</description>
        <label>Contact Permission-Third Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <description>This field is for MSL Project to identify the source of the contact</description>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>IronPort</fullName>
                </value>
                <value>
                    <fullName>ScanSafe</fullName>
                </value>
                <value>
                    <fullName>Customer Success Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Threat_Stage__c</fullName>
        <label>Cloud &amp; Content Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Stage4</fullName>
                </value>
                <value>
                    <fullName>Stage5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Date_Text__c</fullName>
        <description>This field is for MSL Project to change the Date format in Text for display when user hoovers on New Contact Indicator from Marketing.</description>
        <formula>TEXT(DAY(DATEVALUE(CreatedDate)))&amp;"-"&amp; 
CASE( 
(MONTH(DATEVALUE(CreatedDate))), 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May",  
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
12, "Dec", "-")&amp;"-"&amp; 
TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSatisfactionSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>has the contact taken Customer Satisfaction Survey?</description>
        <label>TO BE DEL Customer Satisfaction Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerSatisfaction__c</fullName>
        <description>indicates if the contact has taken Customer Satisfaction survey</description>
        <label>TO BE DELETED Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_NOT_CONTACT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will indicate if the partner contact can be contacted, different from marketing opt-in/out permission. Managed by internal user manually</description>
        <inlineHelpText>Request to not contact made by internal user.   When the contact is synched with the internal Partner Contact Database, contact permissions will then be sourced from that source.</inlineHelpText>
        <label>DO NOT CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Center_Virtualization_Preferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Data Center Virtualization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Used by datamigration team to track source of the contact.</description>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCallPermissionupdated__c</fullName>
        <description>Indicates last date when the Call permission was updated.</description>
        <label>Date Call Permission Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateEmailPermissionupdated__c</fullName>
        <description>Indicates last date when the Email permission was updated.</description>
        <label>Date Email Permission Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFaxPermissionupdated__c</fullName>
        <description>Indicates last date when the Fax permission was updated.</description>
        <label>Date Fax Permission Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMailPermissionupdated__c</fullName>
        <description>Indicates last date when the Mail permission was updated.</description>
        <label>Date Mail Permission Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSMSPermissionupdated__c</fullName>
        <description>Indicates last date when the SMS permission was updated.</description>
        <label>Date SMS Permission Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Third_Party_Permission_Updated__c</fullName>
        <description>Date Third Party Permission Updated from MODS</description>
        <label>Date Third Party Permission Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DecisionMaker__c</fullName>
        <description>is the contact Decision Maker for the company?</description>
        <label>Decision Maker</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Reason__c</fullName>
        <description>Indicates reason why partner provided contact was deleted through PSS (not used in Phase 1B)</description>
        <label>Delete Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Status__c</fullName>
        <description>Indicates reason why partner provided contact was deleted through PSS (not used in Phase 1B)</description>
        <label>Delete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>IS uses Deployment No 99 to indicate records related to IS org.
Initially used by IT data migration to indicate Deployment No when the contacts were migrated.</description>
        <label>Deployment No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dislikes__c</fullName>
        <description>Things that the contact or their company dislikes about Cisco.</description>
        <label>TO BE DELETED Dislikes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Account_Owner__c</fullName>
        <description>Is account owner dummy user</description>
        <formula>Account.Owner.Dummy_User__c</formula>
        <label>Dummy Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicatePrevention__c</fullName>
        <description>Workflow adds AccountId - LastName - Email to Partner Contacts. This combo needs to be unique to prevent duplicates.</description>
        <externalId>true</externalId>
        <label>DuplicatePrevention</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Duplicate_Contact_Check__c</fullName>
        <description>Field to check if contact is unique</description>
        <formula>Account.Account_ID_18__c &amp; '-' &amp;  LastName &amp; '-' &amp;  Email</formula>
        <label>Duplicate Contact Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress2__c</fullName>
        <description>Alternate email address of the contact</description>
        <label>Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailAddress3__c</fullName>
        <description>Alternate email address of the contact</description>
        <label>TO BE DELETED Email Address 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emerging_Technologies_Preferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Emerging Technologies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmploymentDuration__c</fullName>
        <description>Duration the contact is employed with the company</description>
        <label>TO BE DELETED Employment Duration</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folloze_Board_Name__c</fullName>
        <description>Folloze Board Name</description>
        <label>Folloze Board Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folloze_Board_URL__c</fullName>
        <description>Folloze Board URL</description>
        <label>Folloze Board URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Folloze_Contacted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Folloze Contacted</description>
        <label>Folloze Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Folloze Converted</description>
        <label>Folloze Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Engaged__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Folloze Engaged</description>
        <label>Folloze Engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Score__c</fullName>
        <description>Folloze Score</description>
        <label>Folloze Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folloze_Status_Last_Update__c</fullName>
        <description>Folloze Status Last Update</description>
        <label>Folloze Status Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folloze_Status__c</fullName>
        <description>Folloze Status</description>
        <label>Folloze Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GVE_Adoption_Support__c</fullName>
        <description>If Account has lifecycle advisor, they are entitled to adoption support</description>
        <formula>IF (CONTAINS(UPPER(Account.TSN_Account_Entitlement__c), 'ADOPTION SERVICES SUPPORT'), 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GVE Adoption Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the contact</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hard_Bounce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCP Phase1: To indicate if the Lead email was hard bounced</description>
        <label>Invalid Email (Bounced)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heard_Cisco_Arch_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if the contact has heard Cisco’s architecture message.</description>
        <label>TO BE DELETED Heard Cisco Arch Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Copy__c</fullName>
        <description>Copy of  HomePhone value without special characters</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(HomePhone, ' ', '' ), '+', '' ), '(', '' ), ')', '' ), '-', '' ), '*', '' ), ':', '' ), '/', '' ), '#', '' ), '?', '' ), 'ext', '' ),'.', '' ),';', '' ),"'", '' ), ',', '' ), '"', '' ), '!', '' ), 'x', '' )</formula>
        <label>TO BE DELETED Home Phone Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Preferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Home</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IIdealTimeToContact__c</fullName>
        <description>Ideal Time when the Contact should be contacted</description>
        <label>Ideal Time to Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_With_MCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCP Phase1: To indicate of the Lead is Integrated with MCP Eloqua</description>
        <label>Integrated with Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jabber_Phone_Number__c</fullName>
        <description>Automatically copy the phone number and convert into the jabber search engine expected format so that incoming call can identify the record by matching phone number.</description>
        <externalId>true</externalId>
        <inlineHelpText>Automatically copy the phone number and convert into the jabber search engine expected format so that incoming call can identify the record by matching phone number.</inlineHelpText>
        <label>Jabber Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobFunction__c</fullName>
        <description>indicates the Job Function of the contact</description>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consultant/Contractor</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Demand/Supply Planning</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Facilities/Estates Manager</fullName>
                </value>
                <value>
                    <fullName>Finance/Accounting/Legal</fullName>
                </value>
                <value>
                    <fullName>HR/Recruitment</fullName>
                </value>
                <value>
                    <fullName>Journalism</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR/Advertising</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Applications Dev</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Data Center</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Operations</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Security</fullName>
                </value>
                <value>
                    <fullName>MIS/IT-Server</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Storage</fullName>
                </value>
                <value>
                    <fullName>MIS/IT - Telecom</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Operations/Administration</fullName>
                </value>
                <value>
                    <fullName>Operations/Administration - Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post-Sales Engineering</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Engineering</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>